Revised version accompanying the publication of the paper

--- a/scripts/train_deeplabv3_resnet101.ipynb
+++ b/scripts/train_deeplabv3_resnet101.ipynb
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "## fixed parameters\n",
-    "batch_size = 16\n",
+    "batch_size = 8\n",
     "learning_rate = 0.00001\n",
     "epochs = 100\n",
     "\n",
@@ -420,7 +420,7 @@
    "source": [
     "# 1. run\n",
     "dataset_paths = [dataset_path1]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -441,7 +441,7 @@
    "source": [
     "# 2. run\n",
     "dataset_paths = [dataset_path2]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -483,7 +483,7 @@
    "source": [
     "# 4. run\n",
     "dataset_paths = [dataset_path4]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "dataset_paths = [dataset_path5]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "dataset_paths = [dataset_path6]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -543,7 +543,7 @@
    "outputs": [],
    "source": [
     "dataset_paths = [dataset_path1,dataset_path2]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -564,7 +564,7 @@
    "source": [
     "# 6. run\n",
     "dataset_paths = [dataset_path1,dataset_path2,dataset_path3]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -585,7 +585,7 @@
    "source": [
     "# 7. run\n",
     "dataset_paths = [dataset_path1,dataset_path2,dataset_path3,dataset_path4]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -605,7 +605,7 @@
    "outputs": [],
    "source": [
     "dataset_paths = [dataset_path1,dataset_path2,dataset_path3,dataset_path4,dataset_path5]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -625,7 +625,7 @@
    "outputs": [],
    "source": [
     "dataset_paths = [dataset_path1,dataset_path2,dataset_path3,dataset_path4,dataset_path5,dataset_path6]\n",
-    "#dataset_paths = [dataset_path1, dataset_path2, dataset_path3]\n",
+    "\n",
     "dataset = SegmentationDataset(dataset_paths)\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
@@ -689,9 +689,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "Python 3.9.16 ('torch')",
    "language": "python",
-   "name": "torch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -703,7 +703,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f3b09f0dae079356b11e2992c8ce1698bd60fda55aea4c87f004ec164747e9c6"
+   }
   }
  },
  "nbformat": 4,
