--- a/scripts/gridsearch_deeplabv3_resnet101.ipynb
+++ b/scripts/gridsearch_deeplabv3_resnet101.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##hyperparamter tuning for Multi Resolution Solar Photovoltaik System Segmentation paper"
+    "## Hyperparamter Tuning for Multi Resolution Solar Photovoltaik System Segmentation Paper"
    ]
   },
   {
@@ -399,9 +399,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "Python 3.9.16 ('torch')",
    "language": "python",
-   "name": "torch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -413,7 +413,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f3b09f0dae079356b11e2992c8ce1698bd60fda55aea4c87f004ec164747e9c6"
+   }
   }
  },
  "nbformat": 4,
